Fixed issue with Form elements on different screen size
Verification Form fields having issues with horizontal scrollbar

--- a/themes/skins/niecalumni.css
+++ b/themes/skins/niecalumni.css
@@ -1933,7 +1933,7 @@ margin: 0 auto;
 
 .verify-inputs {
 width: 50%;
-float: right;
+float: none !important;
 margin: 0 auto;
 }
 .welcome-inputs form {
@@ -2978,7 +2978,6 @@ padding-right: 0px;
 
 font-family: 'Segoe UI', Tahoma, Verdana, Arial, sans-serif;
 color: #6B6B6B;
-overflow: auto;
 max-width: 275px;
 margin: 0 auto;
 }
@@ -3232,7 +3231,8 @@ color: #fff;
 display: inline-block;
 padding: 10px;
 margin:0 auto;
-width: 65%;
+width: 100%;
+    max-width: 100% !important;
 font-weight: bolder;
 text-shadow: 0px 1px 0px rgba(0,0,0,.09);
 border-top-right-radius: 20px;
